--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,4 +6,5 @@ mdTimepicker=js/lib/md-time-picker.js
 #css 파일 경로(css file path)
 registMarkCss=css/popup/regist-mark.css
 mdTimePickerCss=css/lib/md-time-picker.css
+meetMapCss=css/meet-map.css
 
