--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,9 +2,13 @@
 meetMapJs=js/meet-map.js
 registMarkJs=js/popup/regist-mark.js
 mdTimepicker=js/lib/md-time-picker.js
+topJs=js/layout/top.js
 
 #css 파일 경로(css file path)
 registMarkCss=css/popup/regist-mark.css
 mdTimePickerCss=css/lib/md-time-picker.css
 meetMapCss=css/meet-map.css
+topCss=css/layout/top.css
 
+#html 파일 경로(html file path) - 템플릿 조각 전용(template fragment only)
+topHtml=layout/top
