--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,12 +3,16 @@ meetMapJs=js/meet-map.js
 registMarkJs=js/popup/regist-mark.js
 mdTimepicker=js/lib/md-time-picker.js
 topJs=js/layout/top.js
+signupJs=js/signup.js
+loginJs=js/login.js
 
 #css 파일 경로(css file path)
 registMarkCss=css/popup/regist-mark.css
 mdTimePickerCss=css/lib/md-time-picker.css
 meetMapCss=css/meet-map.css
 topCss=css/layout/top.css
+loginCss=css/login.css
+signupCss=css/signup.css
 
 #html 파일 경로(html file path) - 템플릿 조각 전용(template fragment only)
 topHtml=layout/top
