--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,18 +1,20 @@
 #js 파일 경로(js file path)
-meetMapJs=js/meet-map.js
-registMarkJs=js/popup/regist-mark.js
-mdTimepicker=js/lib/md-time-picker.js
-topJs=js/layout/top.js
-signupJs=js/signup.js
-loginJs=js/login.js
+meetMapJs=/js/meet-map.js
+registMarkJs=/js/popup/regist-mark.js
+mdTimepicker=/js/lib/md-time-picker.js
+topJs=/js/layout/top.js
+signupJs=/js/signup.js
+loginJs=/js/login.js
+chargeJs=/js/payment/charge.js
 
 #css 파일 경로(css file path)
-registMarkCss=css/popup/regist-mark.css
-mdTimePickerCss=css/lib/md-time-picker.css
-meetMapCss=css/meet-map.css
-topCss=css/layout/top.css
-loginCss=css/login.css
-signupCss=css/signup.css
+registMarkCss=/css/popup/regist-mark.css
+mdTimePickerCss=/css/lib/md-time-picker.css
+meetMapCss=/css/meet-map.css
+topCss=/css/layout/top.css
+loginCss=/css/login.css
+signupCss=/css/signup.css
+chargeCss=/css/payment/charge.css
 
 #html 파일 경로(html file path) - 템플릿 조각 전용(template fragment only)
-topHtml=layout/top
+topHtml=/layout/top
