--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ topJs=/js/layout/top.js
 signupJs=/js/signup.js
 loginJs=/js/login.js
 chargeJs=/js/payment/charge.js
+multiChatJs=/js/multi-chat.js
 
 #css 파일 경로(css file path)
 registMarkCss=/css/popup/regist-mark.css
@@ -15,6 +16,7 @@ topCss=/css/layout/top.css
 loginCss=/css/login.css
 signupCss=/css/signup.css
 chargeCss=/css/payment/charge.css
+multiChatCss=/css/multi-chat.css
 
 #html 파일 경로(html file path) - 템플릿 조각 전용(template fragment only)
 topHtml=/layout/top
