--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ signupJs=/js/signup.js
 loginJs=/js/login.js
 chargeJs=/js/payment/charge.js
 multiChatJs=/js/multi-chat.js
+myInfoJs=/js/my-info.js
 
 #css 파일 경로(css file path)
 registMarkCss=/css/popup/regist-mark.css
